--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,7 @@
     <!-- Your custom styles (optional) -->
     <link rel="stylesheet" href="./theme/mdb/css/style.css">
     <script src="https://js.stripe.com/v3/"></script>
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.6.0/dist/leaflet.css" />
 </head>
 <body class="mt-4 pt-5 deep-blue-gradient mb-0">
 <div id="root">
