--- a/public/index.html
+++ b/public/index.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Material Design for Bootstrap</title>
+    <title>Pets BNB</title>
     <!-- MDB icon -->
-    <link rel="icon" href="./theme/mdb/img/mdb-favicon.ico" type="image/x-icon">
+    <link rel="icon" href="./theme/mdb/img/favicon-petsBNB.ico" type="image/x-icon">
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css">
     <!-- Bootstrap core CSS -->
