[UPDATE] landing page

--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,9 @@
     <script src="https://js.stripe.com/v3/"></script>
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.6.0/dist/leaflet.css" />
 </head>
-<body class="mt-4 pt-5 deep-blue-gradient mb-0">
+
+<body class="mt-4 pt-5 deep-blue-gradient mb-0" style="background: url('https://img.webmd.com/dtmcms/live/webmd/consumer_assets/site_images/article_thumbnails/slideshows/cat_people_vs_dog_people_slideshow/1800x1200_cat_people_vs_dog_people_slideshow_alt.jpg') no-repeat center center fixed;background-size: cover;
+">
 <div id="root">
 
 </div>
