--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,8 @@
     <link rel="stylesheet" href="./theme/mdb/css/style.css">
     <script src="https://js.stripe.com/v3/"></script>
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.6.0/dist/leaflet.css" />
+    <script src="https://cdn.jsdelivr.net/npm/bs-stepper/dist/js/bs-stepper.min.js"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bs-stepper/dist/css/bs-stepper.min.css"/>
 </head>
 
 <body class="mt-4 pt-5 deep-blue-gradient mb-0" style="background: url('https://img.webmd.com/dtmcms/live/webmd/consumer_assets/site_images/article_thumbnails/slideshows/cat_people_vs_dog_people_slideshow/1800x1200_cat_people_vs_dog_people_slideshow_alt.jpg') no-repeat center center fixed;background-size: cover;
